k8s/movie-management/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-management-deployment
  labels:
    app: movie-management-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-management-pod
  template:
    metadata:
      labels:
        app: movie-management-pod
    spec:
      containers:
        - image: zaranik/movie-management-service:2.71
          name: movie-management-container
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "512Mi"
              cpu: "250m"
