k8s/movie-management/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: "Prefix"
            backend:
              service:
                name: movie-management
                port:
                  number: 80
